# SkyrimCombatLogger

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SkyrimCombatLogger.ini  vcpkg.json
src/: Plugin.cpp
